--- a/DevOps_Project/pom.xml
+++ b/DevOps_Project/pom.xml
@@ -86,17 +86,19 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>3.4.1</version>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.2.0</version>
                     <configuration>
-                        <webResources>
-                            <resource>
-                                <!-- this is relative to the pom.xml directory -->
-                                <directory>resource2</directory>
-                            </resource>
-                        </webResources>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <mainClass>tn.esprit.devops_project.DevOps_ProjectSpringBootApplication</mainClass>
+                            </manifest>
+                        </archive>
                     </configuration>
                 </plugin>
+
+
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
