--- a/DevOps_Project/pom.xml
+++ b/DevOps_Project/pom.xml
@@ -84,19 +84,17 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.0</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <mainClass>tn.esprit.devops_project.DevOps_ProjectSpringBootApplication</mainClass>
-                            </manifest>
-                        </archive>
-                    </configuration>
-                </plugin>
+               
+
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <mainClass>tn.esprit.devops_project.DevOps_ProjectSpringBootApplication</mainClass>
+                            <layout>JAR</layout>
+                        </configuration>
+                    </plugin>
+
 
 
                 <plugin>
