--- a/DevOps_Project/pom.xml
+++ b/DevOps_Project/pom.xml
@@ -94,6 +94,22 @@
                             <layout>JAR</layout>
                         </configuration>
                     </plugin>
+                <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <configuration>
+                        <skip>false</skip>
+                        <images>
+                            <image>
+                                <build>
+                                    <entryPoint>
+                                        java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -cp '/maven/*' play.core.server.ProdServerStart
+                                    </entryPoint>
+                                </build>
+                            </image>
+                        </images>
+                    </configuration>
+                </plugin>
 
 
 
