--- a/DevOps_Project/src/main/resources/application.properties
+++ b/DevOps_Project/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 ### DATABASE ###
-spring.application.name=DevOps_Project
+spring.application.name=devops_project
 spring.datasource.url=jdbc:mysql://localhost:3306/devops?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
