--- a/DevOps_Project/src/main/resources/application.properties
+++ b/DevOps_Project/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port=8082
 ### DATABASE ###
 spring.application.name=devops_project
-spring.datasource.url=jdbc:mysql://localhost:3306/devops?createDatabaseIfNotExist=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
