--- a/DevOps_Project/pom.xml
+++ b/DevOps_Project/pom.xml
@@ -15,6 +15,7 @@
     <description>DevOps_Project</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
         <dependency>
